--- a/src/main-scss/variables-default.scss
+++ b/src/main-scss/variables-default.scss
@@ -76,6 +76,7 @@ $message-menu-color: #555 !default;
 $message-menu-txt-color: black !default;
 $message-menu-vote-color: #888 !default;
 $message-menu-vote-hover-color: #555 !default;
+$message-menu-vote-on-color: $general-text-color !default;
 $message-menu-link-color: #336 !default;
 
 $message-me-user-bg: inherit !default;
