--- a/themes/snobbish-goldfish/variables.scss
+++ b/themes/snobbish-goldfish/variables.scss
@@ -93,6 +93,7 @@ $message-menu-bg: #444;
 $message-menu-color: #aaa;
 $message-menu-txt-color: #aaa;
 $message-menu-vote-color: #999;
+$message-menu-vote-on-color: #860;
 $message-menu-vote-hover-color: #970;
 $message-menu-link-color: #b28b79;
 $message-votes-color: #970;
